--- a/DIAN/css/common.css
+++ b/DIAN/css/common.css
@@ -41,6 +41,15 @@
     background-color: transparent;
     color: #460D02;
 }
+::-webkit-scrollbar {
+    width: 10px;  /* 세로축 스크롤바 폭 너비 */
+}
+::-webkit-scrollbar-thumb {
+    background-color: #B70809;
+    border-radius: 999px;
+}
+
+
 
 html, body {
     font-family: 'PPMonumentExtended', 'GmarketSans', sans-serif;
