--- a/css/layout.css
+++ b/css/layout.css
@@ -4,7 +4,7 @@ header {
     top: 0;
     z-index: 100;
     width: 100%;
-    height: 100px;
+    height: 70px;
     display: none;
 }
 header .gnb ul {
@@ -15,13 +15,24 @@ header .gnb ul li a {
     display: block;
     font-size: 22px;
     font-weight: 900;
-    line-height: 100px;
+    line-height: 70px;
+}
+header .gnb ul li:nth-child(1) a:hover {
+    color: #020202;
+}
+header .gnb ul li:nth-child(2) a:hover {
+    color: #C1B6A4;
+}
+header .gnb ul li:nth-child(3) a:hover {
+    color: #B70809;
+}
+header .gnb ul li:nth-child(4) a:hover {
+    color: #1B3281;
 }
 header.fixed {
-    background-color: rgba(255, 255, 255, 0.11);
-    backdrop-filter: blur(2px);
+    background-color:rgba(0, 0, 0, 0.33);
     display: block;
-    color: #020202;
+    color: #fdfdfd;
 }
 
 footer {
