--- a/css/main.css
+++ b/css/main.css
@@ -36,20 +36,22 @@
     right: 672px;
     bottom: 57px;
     font-size: 50px;
-    font-weight: 900;
     color: #fff;
     text-align: right;
     mix-blend-mode: difference;
 }
 .visual .title em.bot span.top {
     line-height: 121%;
+    font-weight: 400;
 }
 .visual .title em.bot strong {
     font-size: 70px;
-    line-height: 101%;
+    line-height: 91%;
+    font-weight: 900;
 }
 .visual .title em.bot span.bot {
     line-height: 111%;
+    font-weight: 400;
 }
 .visual .txt {
     position: relative;
@@ -90,7 +92,13 @@
     height: 10px;
     background-color: #020202;
 }
-
+.slough .info_2 {
+    display: flex;
+    flex-direction: column;
+}
+.slough .info_2 span {
+    margin-top: 5px;
+}
 .slough {
     margin-top: 200px;
 }
@@ -222,7 +230,7 @@
     margin-top: 100px;
 }
 .slough .box_dian .box_dian_txt {
-    padding: 20px 165px 20px 51px;
+    padding: 20px 165px 214px 51px;
     border: 2px solid #020202;
     border-right: 0;
     border-radius: 8px 0 0 8px;
@@ -334,7 +342,7 @@
     margin-top: 100px;
 }
 .slough .box_surgery .box_surgery_txt {
-    padding: 20px 165px 20px 51px;
+    padding: 20px 165px 267px 51px;
     border: 2px solid #020202;
     border-right: 0;
     border-radius: 8px 0 0 8px;
